# abm-neural-estimation

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  deepabm.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  pytest.yml  ruff.yml
data/: SP500.csv
experiments/: default.yaml
scripts/: update_readme.py
src/deepabm/: evaluate.py  generate.py  train.py
src/deepabm/models/: models.py
src/deepabm/policies/: __init__.py  policies.py  policy_astar.py  policy_base.py
src/deepabm/utils/: logger.py  seed.py
src/deepabm/utils/parsers/: __init__.py  parser_base.py  parser_evaluate.py  parser_generate.py  parser_train.py
src/deepfabm/: __init__.py  cli.py  evaluate.py  generate.py  plot.py  train.py
src/deepfabm/models/: __init__.py  base.py  model_rwalksb.py  models.py  registry.py
src/deepfabm/models/implementations/: __init__.py  rwalkd.py  rwalksb.py
src/deepfabm/networks/: __init__.py  base.py  registry.py
src/deepfabm/networks/implementations/: __init__.py  lstm.py
src/deepfabm/policies/: policies.py  policy_random.py  policy_trained.py
src/deepfabm/utils/: __init__.py  loader.py  logger.py  parser.py  plots.py  seed.py  setup.py
src/deepfabm/utils/parsers/: __init__.py  base.py  evaluate.py  parser_base.py  parser_evaluate.py  parser_plot.py  parser_train.py  plot.py  train.py
tests/: conftest.py  test_models.py  test_networks.py  test_policies.py
thesis/: README.txt  Thesis.aux  Thesis.bbl  Thesis.blg  Thesis.lof  Thesis.lot  Thesis.out  Thesis.tcp  Thesis.tex  Thesis.toc  Thesis.tps  Thesis.xmpdata  ignoredThesisEnglish.sc  pdfa.xmpi  picins.sty
thesis/01_Frontmatter/: abst.tex  ackn.tex  acro.tex  decl.tex  jacket.blg  jacket.tex  prop.tex
thesis/02_Mainmatter/: 01_Intro.tex  02.tex  03.tex  04.tex  05.tex  06.tex  99_Concl.tex
thesis/03_Backmatter/: 01_App.tex  02_App.tex
thesis/Styles/: Bibliography.bib.bak  Head.sty  Mystyle.sty  Stylebib.bst  Stylebib.dbj
