[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "deepfabm"
version = "0.0.1"
authors = [
  { name="Eric Zila", email="zila.eric@gmail.com" },
]
description = "Deep neural network estimation framework for financial agent-based models."
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["deep-learning", "neural-network", "transformer", "multi-agent-model"]

[project.urls]
Homepage = "https://github.com/zilaeric/abm-neural-estimation"
Issues = "https://github.com/zilaeric/abm-neural-estimation/issues"
