[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "deepfabm"
version = "0.0.1"
authors = [
  { name="Eric Zila", email="zila.eric@gmail.com" },
]
description = "Deep neural network estimation framework for financial agent-based models."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["deep learning", "neural network", "transformer", "multi-agent model"]

[project.scripts]
deepfabm-train = "deepfabm.train:run"
deepfabm-evaluate = "deepfabm.evaluate:run"

[project.urls]
Homepage = "https://github.com/zilaeric/abm-neural-estimation"
Issues = "https://github.com/zilaeric/abm-neural-estimation/issues"

# --- Linting / formatting -------------------------------------------------
# Ruff enforces PEP 8-style checks via pycodestyle (E/W) and related rules.
[tool.ruff]
target-version = "py314"
line-length = 88

# Keep linting focused on the Python package and tests.
src = ["src"]
extend-exclude = [
  "data",
  "results",
  "wandb",
  "weights",
]

[tool.ruff.lint]
# E/W: pycodestyle (PEP 8), F: pyflakes (unused imports/vars), I: import sorting.
select = ["E", "W", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
